syntax = "proto3";
package seatlect;

option go_package = "github.com/tphume/seatlect-services/internal/genproto/reservationpb";

import "common.proto";

service ReservationService {
  rpc ListReservation (ListReservationRequest) returns (ListReservationResponse);
}

// For ListReservation endpoint
// start and end are optional
message ListReservationRequest {
  string start = 1;
  string end = 2;
}

message ListReservationResponse {
  repeated Reservation reservation = 1;
}
